--- a/api/Forecast/appsettings.json
+++ b/api/Forecast/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GeocodingUrl": "https://geocoding.geo.census.gov",
+  "WeatherUrl": "https://api.weather.gov"
 }
